syntax = "proto3";

package pb;
option go_package = "pb";

message NodeInfo {
    bytes nodeId = 1;
    string TCPAddress = 2;
    string UDPAddress = 3;
}

message FindNodeReq {
    bytes nodeID =1;
    int32 maxResults = 2;
}

message FindNodeResp {
    repeated NodeInfo nodeInfos = 1;
}

message Ping {
    NodeInfo me = 1;
    string ToAddr = 2;
}

// todo : REPLACE WITH XDR :)